<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TermProject</string>
    <string name="User">User Goes First</string>
    <string name="Cpu">Cpu Goes First</string>	
    <string name="turn_user">Its user turn</string>
    <string name="turn_cpu">Its Cpu\'s turn</string>
    <string name="tie">It is a tie!	</string>
    <string name="user_wins">User Won!</string>
    <string name="cpu_wins">cpu Won!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">Information!</string>
    <string name="cpu">CPU:  </string>
    <string name="user">USER:  </string>
    <string name="ties">TIES:  </string>
    <string name="action_settings">action_settings</string>
     <string name="newGame_label">New Game</string>  
    <string name="exitGame_label">Exit Game</string>
    
</resources>
