<?xml version="1.0" encoding="utf-8"?>
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/Game"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="@drawable/paper_background"
      android:gravity="center_horizontal" >

     <TableLayout
         android:id="@+id/GameBoard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="24dp" >

         <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal" >

             <Button
                 android:id="@+id/one"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@android:color/holo_green_light"
                 android:text="@string/one"
                 android:textSize="70sp" 
                 />
               
             <Button
                 android:id="@+id/two"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="3dp"
                 android:background="@android:color/holo_green_light"
                 android:text="@string/two"
                 android:textSize="70sp" />

             <Button
                 android:id="@+id/three"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="3dp"
                 android:background="@android:color/holo_green_light"
                 android:text="@string/three"
                 android:textSize="70sp" />

         </TableRow>

         <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal" >

             <Button
                 android:id="@+id/four"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="3dp"
                 android:background="@android:color/holo_green_light"
                 android:text="@string/four"
                 android:textSize="70sp" />

             <Button
                 android:id="@+id/five"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="3dp"
                 android:background="@android:color/holo_green_light"
                 android:text="@string/five"
                 android:textSize="70sp" />

             <Button
                 android:id="@+id/six"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="3dp"
                 android:background="@android:color/holo_green_light"
                 android:text="@string/six"
                 android:textSize="70sp" />

         </TableRow>

         <TableRow
             android:id="@+id/tableRow3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal" >

             <Button
                 android:id="@+id/seven"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="3dp"
                 android:background="@android:color/holo_green_light"
                 android:text="@string/seven"
                 android:textSize="70sp" />

             <Button
                 android:id="@+id/eight"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="3dp"
                 android:background="@android:color/holo_green_light"
                 android:text="@string/eight"
                 android:textSize="70sp" />

             <Button
                 android:id="@+id/nine"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginTop="3dp"
                 android:background="@android:color/holo_green_light"
                 android:text="@string/nine"
                 android:textSize="70sp" />

         </TableRow>

         <TextView
             android:id="@+id/Information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
             android:text="@string/info"
             android:textSize="30sp" />

         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >

             <TableRow
                 android:id="@+id/tableRow4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:gravity="center_horizontal" >

                 <TextView
                     android:id="@+id/Tie"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/ties" />

                 <TextView
                     android:id="@+id/tieCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp" />

                 <TextView
                     android:id="@+id/cpu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/cpu" />

                 <TextView
                     android:id="@+id/cpuTotal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp" />

                 <TextView
                     android:id="@+id/user"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:text="@string/user" />

                 <TextView
                     android:id="@+id/userTotal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />

             </TableRow>

         </TableLayout>

     </TableLayout>

</RelativeLayout>
